fixed button alignment on the form

--- a/src/components/authentication/Signup.css
+++ b/src/components/authentication/Signup.css
@@ -77,7 +77,8 @@ select {
 }
 
 .login-caption {
-  margin-left: 5px;
+  display: block;
+  margin-top: 7px;
 }
 
 label {
@@ -113,9 +114,6 @@ h1 {
   margin-top: 10px;
 }
 
-.form-container .submit-form {
-  display: flex;
-}
 /* mobile responsive */
 @media screen and (max-width: 800px) {
   .form-container {
